Fix gallery item caption overflow

--- a/src/components/GalleryViewer/GalleryViewer.scss
+++ b/src/components/GalleryViewer/GalleryViewer.scss
@@ -85,6 +85,7 @@
 
     margin-top: 20px;
     max-width: 60%;
+    word-wrap: break-word;
   }
 
   &__counter {
